# Locale_Simulator

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ZQFPackages.cmake  ZQFSettings.cmake
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/src/Locale_Simulator/Core/: GdiPatcher.cpp  GdiPatcher.h  LsStatus.cpp  LsStatus.h  MsgPatcher.cpp  MsgPatcher.h  NlsPatcher.cpp  NlsPatcher.h  Win32uPatcher.cpp  Win32uPatcher.h  WndPatcher.cpp  WndPatcher.h
src/Loader/: CMakeLists.txt  main.cpp
src/Payload/: CMakeLists.txt  dllmain.cpp
src/Utils/: CMakeLists.txt
src/Utils/src/Locale_Simulator/Utils/: EnvHelpher.cpp  EnvHelpher.h  LSStatus.cpp  LSStatus.h  SHooker.cpp  SHooker.h  SysInfo.cpp  SysInfo.h  TextConvert.cpp  TextConvert.h  VAHelper.cpp  VAHelper.h
test/: CMakeLists.txt  main.cpp
third/Detours/: CMakeLists.txt
tryout/: CMakeLists.txt  main.cpp
